crates/strider-analyze/tests/snapshots/v3__arm_be__calling_convention__forward_8.snap
---
source: crates/strider/tests/v3_baseline.rs
expression: snapshot_body
---
digraph "G" {
  graph [
    rankdir=TB,
    bgcolor="#1e1e1e",
    fontcolor=white,
  ];

  node [
    shape=box,
    style="filled,rounded",
    fillcolor="#2d2d2d",
    color="#888888",
    fontcolor=white,
    fontname=monospace,
    margin=0.2,
  ];

  edge [
    color="#aaaaaa",
    fontcolor=white,
    penwidth=1.2,
  ];

  "0" [label="Entry", shape=Mdiamond, fillcolor="#1a3a5c"];
  "1" [label="Call", shape=rarrow, fillcolor="#3a1010"];
  "0" -> "1" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "2" -> "1" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "3" -> "1" [color="#ffdd44", label=target, fontcolor="#cccccc", fontsize=9];
  "3" [label="const 0x10154:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "4" -> "1" [color="#ff8800", label=arg0, fontcolor="#cccccc", fontsize=9];
  "5" -> "1" [color="#ff8800", label=arg1, fontcolor="#cccccc", fontsize=9];
  "6" -> "1" [color="#ff8800", label=arg2, fontcolor="#cccccc", fontsize=9];
  "7" -> "1" [color="#ff8800", label=arg3, fontcolor="#cccccc", fontsize=9];
  "8" -> "1" [color="#ff8800", label=arg4, fontcolor="#cccccc", fontsize=9];
  "9" -> "1" [color="#ff8800", label=arg5, fontcolor="#cccccc", fontsize=9];
  "10" -> "1" [color="#ff8800", label=arg6, fontcolor="#cccccc", fontsize=9];
  "11" -> "1" [color="#ff8800", label=arg7, fontcolor="#cccccc", fontsize=9];
  "7" -> "1" [color="#ff8800", label=arg8, fontcolor="#cccccc", fontsize=9];
  "6" -> "1" [color="#ff8800", label=arg9, fontcolor="#cccccc", fontsize=9];
  "5" -> "1" [color="#ff8800", label=arg10, fontcolor="#cccccc", fontsize=9];
  "4" -> "1" [color="#ff8800", label=arg11, fontcolor="#cccccc", fontsize=9];
  "12" [label="Return", shape=doublecircle, fillcolor="#103a10"];
  "1" -> "12" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "1" -> "12" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "13" -> "12" [color="#88cc88", label=r0, fontcolor="#cccccc", fontsize=9];
  "11" -> "12" [color="#88cc88", label=r1, fontcolor="#cccccc", fontsize=9];
  "v14" [label="Post Call\nd0", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "1" -> "v14" [color="#888888", style=dashed];
  "v14" -> "12" [color="#88cc88", label=d0, fontcolor="#cccccc", fontsize=9];
  "v15" [label="Post Call\nd1", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "1" -> "v15" [color="#888888", style=dashed];
  "v15" -> "12" [color="#88cc88", label=d1, fontcolor="#cccccc", fontsize=9];
  "11" [label="arg[7] ← ram[sp + 12]", shape=Mdiamond, fillcolor="#1a3a5c"];
  "13" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "16" -> "13" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "11" -> "13" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "16" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "17" -> "16" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "10" -> "16" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "10" [label="arg[6] ← ram[sp + 8]", shape=Mdiamond, fillcolor="#1a3a5c"];
  "17" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "18" -> "17" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "9" -> "17" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "9" [label="arg[5] ← ram[sp + 4]", shape=Mdiamond, fillcolor="#1a3a5c"];
  "18" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "19" -> "18" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "8" -> "18" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "8" [label="arg[4] ← ram[sp + 0]", shape=Mdiamond, fillcolor="#1a3a5c"];
  "19" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "20" -> "19" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "21" -> "19" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "21" [label="Load u32\n← ram", shape=box3d, fillcolor="#102030"];
  "1" -> "21" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "22" -> "21" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "22" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "23" -> "22" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "24" -> "22" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "24" [label="const 0x1ffffffd8:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "23" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "20" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "25" -> "20" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "26" -> "20" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "26" [label="Load u32\n← ram", shape=box3d, fillcolor="#102030"];
  "1" -> "26" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "27" -> "26" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "27" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "23" -> "27" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "28" -> "27" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "28" [label="const 0x1ffffffdc:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "25" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "29" -> "25" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "30" -> "25" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "30" [label="Load u32\n← ram", shape=box3d, fillcolor="#102030"];
  "1" -> "30" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "31" -> "30" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "31" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "23" -> "31" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "32" -> "31" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "32" [label="const 0x1ffffffe0:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "29" [label="Load u32\n← ram", shape=box3d, fillcolor="#102030"];
  "1" -> "29" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "33" -> "29" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "33" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "23" -> "33" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "34" -> "33" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "34" [label="const 0x1ffffffe4:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "4" [label="arg[0] ← r0", shape=Mdiamond, fillcolor="#1a3a5c"];
  "5" [label="arg[1] ← r1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "6" [label="arg[2] ← r2", shape=Mdiamond, fillcolor="#1a3a5c"];
  "7" [label="arg[3] ← r3", shape=Mdiamond, fillcolor="#1a3a5c"];
  "2" [label="StackStore u32\n→ ram[sp - 56]", shape=box3d, fillcolor="#20182a"];
  "35" -> "2" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v36" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v36" -> "2" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "8" -> "2" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "35" [label="StackStore u32\n→ ram[sp - 52]", shape=box3d, fillcolor="#20182a"];
  "37" -> "35" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v38" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v38" -> "35" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "9" -> "35" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "37" [label="StackStore u32\n→ ram[sp - 48]", shape=box3d, fillcolor="#20182a"];
  "39" -> "37" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v40" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v40" -> "37" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "10" -> "37" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "39" [label="StackStore u32\n→ ram[sp - 44]", shape=box3d, fillcolor="#20182a"];
  "41" -> "39" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v42" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v42" -> "39" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "11" -> "39" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "41" [label="Store u32\n→ ram", shape=box3d, fillcolor="#102030"];
  "43" -> "41" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "44" -> "41" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "44" [label="const 0x20a48:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "11" -> "41" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "43" [label="Store u32\n→ ram", shape=box3d, fillcolor="#102030"];
  "45" -> "43" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "46" -> "43" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "46" [label="const 0x20a48:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "10" -> "43" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "45" [label="Store u32\n→ ram", shape=box3d, fillcolor="#102030"];
  "47" -> "45" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "48" -> "45" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "48" [label="const 0x20a48:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "9" -> "45" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "47" [label="Store u32\n→ ram", shape=box3d, fillcolor="#102030"];
  "49" -> "47" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "50" -> "47" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "50" [label="const 0x20a48:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "8" -> "47" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "49" [label="Store u32\n→ ram", shape=box3d, fillcolor="#102030"];
  "51" -> "49" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "52" -> "49" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "52" [label="const 0x20a48:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "7" -> "49" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "51" [label="Store u32\n→ ram", shape=box3d, fillcolor="#102030"];
  "53" -> "51" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "54" -> "51" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "54" [label="const 0x20a48:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "6" -> "51" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "53" [label="Store u32\n→ ram", shape=box3d, fillcolor="#102030"];
  "55" -> "53" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "56" -> "53" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "56" [label="const 0x20a48:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "5" -> "53" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "55" [label="Store u32\n→ ram", shape=box3d, fillcolor="#102030"];
  "57" -> "55" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "58" -> "55" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "58" [label="const 0x20a48:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "4" -> "55" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "57" [label="StackStore u32\n→ ram[sp - 40]", shape=box3d, fillcolor="#20182a"];
  "59" -> "57" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v60" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v60" -> "57" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "7" -> "57" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "59" [label="StackStore u32\n→ ram[sp - 36]", shape=box3d, fillcolor="#20182a"];
  "61" -> "59" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v62" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v62" -> "59" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "6" -> "59" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "61" [label="StackStore u32\n→ ram[sp - 32]", shape=box3d, fillcolor="#20182a"];
  "63" -> "61" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v64" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v64" -> "61" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "5" -> "61" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "63" [label="StackStore u32\n→ ram[sp - 28]", shape=box3d, fillcolor="#20182a"];
  "65" -> "63" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v66" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v66" -> "63" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "4" -> "63" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "65" [label="StackStore u32\n→ ram[sp - 24]", shape=box3d, fillcolor="#20182a"];
  "67" -> "65" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v68" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v68" -> "65" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "69" -> "65" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "69" [label="init\nr4", shape=Mdiamond, fillcolor="#1a3a5c"];
  "67" [label="StackStore u32\n→ ram[sp - 20]", shape=box3d, fillcolor="#20182a"];
  "70" -> "67" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v71" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v71" -> "67" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "72" -> "67" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "72" [label="init\nr5", shape=Mdiamond, fillcolor="#1a3a5c"];
  "70" [label="StackStore u32\n→ ram[sp - 16]", shape=box3d, fillcolor="#20182a"];
  "73" -> "70" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v74" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v74" -> "70" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "75" -> "70" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "75" [label="init\nr6", shape=Mdiamond, fillcolor="#1a3a5c"];
  "73" [label="StackStore u32\n→ ram[sp - 12]", shape=box3d, fillcolor="#20182a"];
  "76" -> "73" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v77" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v77" -> "73" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "78" -> "73" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "78" [label="init\nr10", shape=Mdiamond, fillcolor="#1a3a5c"];
  "76" [label="StackStore u32\n→ ram[sp - 8]", shape=box3d, fillcolor="#20182a"];
  "79" -> "76" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v80" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v80" -> "76" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "81" -> "76" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "81" [label="init\nr11", shape=Mdiamond, fillcolor="#1a3a5c"];
  "79" [label="StackStore u32\n→ ram[sp - 4]", shape=box3d, fillcolor="#20182a"];
  "82" -> "79" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v83" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v83" -> "79" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "84" -> "79" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "84" [label="init\nlr", shape=Mdiamond, fillcolor="#1a3a5c"];
  "82" [label="InitialMemory", shape=Mdiamond, fillcolor="#1a3a5c"];
}
